# JWTAuth

./: .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Makefile  bandit.yaml  main.py  pyproject.toml  requirements.txt  run.py
src/auth/: route.py
src/auth/entities/: user.py
src/auth/service/: jwt.py
src/auth/service/exceptions/: jwt_exceptions.py
src/auth/use_case/: login.py  refresh.py
src/auth/use_case/dto/: login_input.py  refresh_input.py
src/exceptions/: input_data_error.py
src/http_dto/: http_request.py  http_response.py
src/main/login/: login_route.py  login_service.py
src/utils/auth_utils/: jwt.py
src/utils/dto_utils/http_dto/: http_request_dto.py  http_response_dto.py
src/utils/env/: env.py
src/utils/env_utils/: env.py
src/utils/format_error_pydantic/: validation_error.py
test/main/: test_login.py
tests/: conftest.py
tests/auth/route/v1/login/: test_input_validation.py  test_login_error_cases.py  test_login_success_cases.py
tests/auth/route/v1/refresh/: test_refresh_error_cases.py  test_refresh_sucess_cases.py
