[project]
name = "jwtauth"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (==2.32.4)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.9.0"
isort = "^6.0.1"
prospector = "^1.17.1"
black = "^25.1.0"
bandit = "^1.8.3"
mypy = "^1.16.0"
vulture = "^2.14"
pre-commit = "^4.2.0"


[tool.poetry.group.tests.dependencies]
coverage = "^7.8.2"
pytest-cov = "^6.1.1"
pytest = "^8.4.0"

[tool.black]
line-length =  79